--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,15 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v5
+      - uses: actions/checkout@v4  
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20          
+          cache: 'npm'              
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm ci                
 
-    - name: Run tests
-      run: npm test
+      - name: Run tests
+        run: npm test
